# AYED2025-UNC

./: .gitignore  main
00_pointers/: CMakeLists.txt  funciones.cpp  funciones.h  main.cpp  main_test.cpp
01_listas/: CMakeLists.txt  lista.cpp  lista.hpp  main.cpp
01_struct/: CMakeLists.txt  main.cpp
02_clases/: CMakeLists.txt
02_generics/: CMakeLists.txt
03_extensionlistas/: CMakeLists.txt  lista.hpp
03_herencia/: CMakeLists.txt
04_virtual/: CMakeLists.txt
05_listas/: nodo.hpp
06_generics/: main.cpp
07_extensionlistas/: main.cpp
08_colas/: CMakeLists.txt  cola.hpp  main.cpp  pila.hpp
08_parentesis/: lista.hpp
09_colaspilas_array/: cola.hpp
09_posfijo/: CMakeLists.txt
10_parentesis/: CMakeLists.txt  main
10_sorting/: CMakeLists.txt  main.cpp  sorting.hpp
11_extensionlistas/: CMakeLists.txt
12_merge/: CMakeLists.txt  merge.excalidraw
13_heap/: CMakeLists.txt
14_arboles/: CMakeLists.txt  main.cpp
15_arbol_borrado/: CMakeLists.txt  main.cpp
15_arbol_extension/: CMakeLists.txt  main.cpp
16_AVL/: CMakeLists.txt  avl.excalidraw  main.cpp
17_red_black/: CMakeLists.txt
18_busquedas/: CMakeLists.txt  main.cpp  recap.excalidraw
19_busquedas/: CMakeLists.txt  hash.excalidraw  main.cpp
20_bitsets/: CMakeLists.txt
21_grafos_lista/: main
21_grafos_lista/main.dSYM/Contents/Resources/DWARF/: main
21_grafos_lista/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
22_grafos_matriz/: grafo.excalidraw  main
22_grafos_matriz/main.dSYM/Contents/Resources/DWARF/: main
22_grafos_matriz/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
23_grafos_recorridos/: grafo.excalidraw  main  main.cpp
23_grafos_recorridos/main.dSYM/Contents/Resources/DWARF/: main
23_grafos_recorridos/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
23_grafos_topological/: main
23_grafos_topological/main.dSYM/Contents/Resources/DWARF/: main
23_grafos_topological/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
24_grafos_mst/: grafo.excalidraw  main  main.cpp  voraz.excalidraw
24_grafos_mst/main.dSYM/Contents/Resources/DWARF/: main
24_grafos_sh_pth/: grafo.excalidraw  main  main.cpp
24_grafos_sh_pth/main.dSYM/Contents/Resources/DWARF/: main
(+2 files in other folders)
